--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": "^18.18.0 || ^20.9.0 || >=21.1.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -12,10 +15,10 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.10",
-    "axios": "1.7.9",
+    "axios": "^1.12.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-router-dom": "7.2.0",
+    "react-router-dom": "^7.9.3",
     "tailwindcss": "^4.1.10",
     "web-vitals": "^5.0.3"
   },
@@ -24,12 +27,12 @@
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
     "@vitejs/plugin-react": "4.3.4",
-    "eslint": "9.19.0",
+    "eslint": "^9.37.0",
     "eslint-plugin-react-hooks": "5.0.0",
     "eslint-plugin-react-refresh": "0.4.18",
     "globals": "15.14.0",
     "typescript": "5.7.2",
     "typescript-eslint": "8.22.0",
-    "vite": "6.1.1"
+    "vite": "^6.3.6"
   }
 }
